# funexpression

./: .env.example  .gitignore  Dockerfile  TODOS  docker-compose.yml  init.bash  interface.html  pyproject.toml  readme.md
configs/: rabbitmq.conf
funexpression/: main.py
funexpression/aplication/helpers/: helper.py
funexpression/application/helpers/: helper.py
funexpression/application/interfaces/: expression_request_payload.py
funexpression/domain/entities/: de_metadata.py  genome.py  pipeline.py  pipeline_stage_enum.py  triplicate.py  user_data.py
funexpression/domain/factories/: genome_aligner_usecase_factory.py  genome_download_usecase_factory.py  genome_generate_index_usecase_factory.py
funexpression/domain/tasks/: genome_download_task.py  pipeline_task.py  transcriptome_align_task.py  transcriptome_convert_task.py  transcriptome_download_task.py
funexpression/domain/usecases/: base_usecase.py
funexpression/infraestructure/clients/: genbank_service.py
funexpression/infrastructure/: celery.py
funexpression/infrastructure/aligners/: rna_star_adapter.py
funexpression/infrastructure/bio_database/: genbank_adapter.py  geo_adapter.py
funexpression/infrastructure/clients/: commands.py  genbank_service.py  geo_service.py
funexpression/infrastructure/counters/: htseq_count.py
funexpression/infrastructure/database/: mongo_adapter.py
funexpression/infrastructure/differs/: deseq2_adapter.py
funexpression/infrastructure/ui/: home.py
funexpression/star/: star.py
funexpression/tasks/: geo_task.py
funexpression/trimmomatic/: trimmomatic.py
(+55 files in other folders)
