[tool.poetry]
name = "funexpression"
version = "0.1.0"
description = ""
authors = ["Adeonita <adeonita.sousa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
